Fix align in events section

--- a/themes/pattern-lab-starter/dest/style.css
+++ b/themes/pattern-lab-starter/dest/style.css
@@ -6051,7 +6051,7 @@ html {
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 30px;
+    padding-bottom: 50px;
   }
   .list-events:after {
     content: " ";
@@ -6064,9 +6064,10 @@ html {
     padding-bottom: 45px;
     font-size: 35px;
     font-weight: 400;
+    margin-top: 50px;
   }
   .list-events .col-events {
-    padding-left: 85px;
+    padding-left: 90px;
   }
   .list-events .col-events a {
     color: black;
