--- a/themes/pattern-lab-starter/source/_patterns/03-organisms/events/_events.scss
+++ b/themes/pattern-lab-starter/source/_patterns/03-organisms/events/_events.scss
@@ -36,11 +36,12 @@ $base-line-height: 24px;
     	padding-bottom: 45px;
     	font-size: 35px;
       font-weight:$fw--400;
+      margin-top: 50px;
    	 	}
-   	 	padding-bottom: 30px;
+   	 	padding-bottom: 50px;
    	 	.col-events{
    	 		//@include span(12);
-   	 		padding-left: 85px;
+   	 		padding-left: 90px;
 
    	 		a{
    	 			color:$c-black;
